# xMatrix

./: CMakeLists.txt  LICENSE.MD  README.md  tests.cc  xmatrix.cc  xmatrix.h
src/: xmatrix.cc  xmatrix.h
tests/: tests.cc
